syntax = "proto3";

package com.github.romatroskin.viqchat.service.users;

service Users {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc Search(SearchRequest) returns (SearchResponse) {}
}

enum EventType {
    Unknown = 0;
    UserCreated = 1;
    UserUpdated = 2;
    UserDeleted = 3;
}

message Event {
    EventType type = 1;
    User user = 2;
}

message User {
    string id = 1;
    string username = 2;
    string phone = 3;
    string displayname = 4;
    string bio = 5;
    int64 created = 6;
    int64 updated = 7;
}

message CreateRequest {
    User user = 1;
    bool validate_only = 2;
}

message CreateResponse {
    User user = 1;
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {
}

message ReadRequest {
	string id = 1;
	string phone = 2;
}

message ReadResponse {
	User user = 1;
}

message UpdateRequest {
	User user = 1;
}

message UpdateResponse {
	User user = 1;
}

message SearchRequest {
	string query = 1;

}

message SearchResponse {
	repeated User users = 1;
}
